# chm

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
include/abyss/: concurrent_hash_map.h  directives.h
include/chm/: fact.h
src/: CMakeLists.txt  concurrent_hash_map.cpp  main.cpp
tests/: CMakeLists.txt  test_concurrent_hash_map.cpp  test_factorial.cpp
